# golf-cart-code

./: .gitignore  CLAUDE.md  CROSS_DEVICE_RESUME.md  LINUX_QUICKSTART.md  Masterplan.md  PRIMER.md  README.md  STATUS.md
.claude/: README.md
.claude/memory/: MEMORY.md  feedback_jetson_role.md  feedback_planning_depth.md  project_gem_e4_self_driving.md  reference_epas18_ultra.md  reference_gem_e4_j1939_pgns.md  reference_kartech_brake.md  user_role.md
Hardware/: CAD_RECOMMENDATION.md  CART_VISIT_DAY1.md  JETSON_PLUG_LAYOUT.md  JETSON_WIRING_DIAGRAM.md  README.md  SHOPPING_LIST.md  WIRING_DIAGRAM.md  cart_parameters.md  system_design.md
Hardware/OneDrive_1_5-1-2026/Arduino Code/: PGN Data.docx
Hardware/OneDrive_1_5-1-2026/Arduino Code/ARD1939/: ARD1939.h  ARD1939.ino
Hardware/OneDrive_1_5-1-2026/Arduino Code/J1939 Receiving Messages/: J1939_Receiving_Messages.ino
Hardware/OneDrive_1_5-1-2026/Design Docs/: Draft Accelerator Plan.xlsx  Draft Braking Plan.xlsx  Draft Control System Plan.xlsx  Draft Steering Plan.xlsx  Resource Assignments.xlsx
Hardware/OneDrive_1_5-1-2026/Email Messages/: Careers In The SelfDriving Vehicle Industry Datas_1068447768.eml  FW 1hour webinar AutoDevKit™ a New Development Ap_963570155.eml  STMicroelectronics AUTODEVKIT June 2020 WEBINAR_31718219.eml
Hardware/OneDrive_1_5-1-2026/Vinyl Grafx/: Front, License Plate.ai  Rear, back of Box.ai  Windshield Top Edge, v01.ai  Windshield Top Edge, v1.ai  Windshield Top Edge, v2.ai  Windshield Top Edge.ai
Hardware/jetson_runtime/: can0-up.service  gem-cart-runtime.service  run_cart.sh
Old_code/BrakeDuino_copy_20260611172403/: ARD1939.h  BrakeDuino_copy_20260611172403.ino
Old_code/steering/: ReadMe.docx  piduino,v5.py  rc.local
Old_code/steering/SteerDuinoV4/: SteerDuinoV4.ino
Sim/: README.md  SIM_PURPOSE.md  digital_twin_consistency.md  gem_e4_sensors.urdf.xacro
Sim/Cartagena_GEM_E4_workspace/: README.md  launch_ros2.sh
Sim/Cartagena_GEM_E4_workspace/ros2_ws/: .gem.sdf  .gem.urdf  Containerfile  Containerfile.jazzy  container_setup.sh  container_setup_jazzy.sh
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/gem_sim/: CMakeLists.txt  package.xml
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/gem_sim/config/: ros_gz_bridge.yaml
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/gem_sim/launch/: sim_full.launch.py  sim_minimal.launch.py
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/gem_sim/urdf/: cart_parameters.xacro  gem_e4_robot.urdf.xacro  gem_e4_sensors.urdf.xacro
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/pure_pursuit/: package.xml  setup.py
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/pure_pursuit/config/: bridge.yaml
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/pure_pursuit/launch/: sim.launch.py  sim_harmonic.launch.py
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/pure_pursuit/pure_pursuit/: pure_pursuit_node.py
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/pure_pursuit/rviz/: sim.rviz
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/pure_pursuit/worlds/: fau_breezeway.sdf
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/sim_dbw_bridge/: package.xml  setup.cfg  setup.py
Sim/Cartagena_GEM_E4_workspace/ros2_ws/src/sim_dbw_bridge/sim_dbw_bridge/: sim_dbw_bridge_node.py
Sim/Cartagena_GEM_E4_workspace/ros2_ws/tools/: blosm_import.py  build_world.sh  crop_mesh.py  fetch_osm.py  merge_tiles.py  reanchor.py  regions.json  tile_downloader.py
Sim/macos/: Containerfile.macos  README.md  entrypoint.sh
Sim/openpilot_sim/: .gitignore
Sim/openpilot_sim/docs/: PLATFORM_REALITY.md
Sim/openpilot_sim/gem_env/: comma_drives.py  drive_gem.py  gem_vehicle.py  mdexit.py  model_smoke.py  render_check.py
Sim/openpilot_sim/openpilot_overlay/: apply_overlay.py
Sim/openpilot_sim/provisioning/: setup_ubuntu_arm64_vm.sh
Sim/openpilot_sim/provisioning/hpc/: README.md  gem_sim.def  probe_hpc.sh  run_gem_sim.sbatch  stage_login.sh
Sim/preview/: gem_e4_preview.urdf  gem_e4_preview.urdf.xacro
Sim/urdf/: gem_e4_sensors.urdf.xacro
Software/: CART_CONTROL_PLAN.md  README.md  ROS_INTEGRATION_PLAN.md  dbw_translation_architecture.md
Software/autonomy_ws/src/gem_dbw_bridge/: package.xml  setup.cfg  setup.py
Software/autonomy_ws/src/gem_dbw_bridge/gem_dbw_bridge/: gem_dbw_bridge_node.py
Software/autonomy_ws/src/gem_teleop/: package.xml  setup.cfg  setup.py
Software/autonomy_ws/src/gem_teleop/gem_teleop/: joy_to_ackermann_node.py
Software/autonomy_ws/src/gem_teleop/launch/: teleop.launch.py
Software/firmware/: README.md
Software/firmware/brake_sniff_teensy/: platformio.ini
Software/firmware/brake_sniff_teensy/src/: main.cpp
Software/firmware/brake_test_teensy/: brake.py  platformio.ini
Software/firmware/brake_test_teensy/src/: main.cpp
Software/firmware/common/include/: dbw_can_protocol.h  kartech_brake.h
Software/firmware/kartech_brake_reference/: BrakeDuino.c
Software/firmware/motion_teensy/: platformio.ini
Software/firmware/motion_teensy/src/: main.cpp
Software/firmware/pedals_teensy/: platformio.ini
Software/firmware/pedals_teensy/src/: main.cpp
Software/firmware/steer_test_teensy/: drive.py  platformio.ini
Software/firmware/steer_test_teensy/src/: main.cpp
