<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gem_dbw_bridge</name>
  <version>0.1.0</version>
  <description>
    Real-cart drive-by-wire bridge — translates ROS 2 ackermann commands
    on /dbw/cmd into CAN frames on can0, and republishes incoming
    *_STATUS / VEHICLE_STATE frames as ROS topics.

    Pairs with the two Teensy firmwares in Software/firmware/. SAME
    state machine semantics as Sim/.../sim_dbw_bridge for sim ↔ real
    parity, but emits CAN frames instead of Twist.
  </description>
  <maintainer email="mpcrlab@gmail.com">FAU MPCR</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>python3-can</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
