<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gem_teleop</name>
  <version>0.1.0</version>
  <description>
    Gamepad teleop for the GEM E4. Maps Logitech F710 axes/buttons to
    /dbw/cmd (AckermannDriveStamped). Includes deadman trigger to ensure
    /dbw/cmd is only published while the operator is actively pressing
    the deadman button.
  </description>
  <maintainer email="mpcrlab@gmail.com">FAU MPCR</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>gem_dbw_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
