<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_dbw_bridge</name>
  <version>0.1.0</version>
  <description>
    Simulated drive-by-wire translation layer for the GEM E4 digital
    twin. Implements the SAME state machine (DISENGAGED/ARMED/ACTIVE/
    FAULT) and safety gates as the real Teensy firmware (see
    Software/firmware/common/include/dbw_can_protocol.h), but writes
    geometry_msgs/Twist to Gazebo instead of CAN frames to a Teensy.

    Autonomy code that talks to /dbw/cmd, /dbw/enable, /vehicle/* on the
    sim should work unchanged on the real cart with the C++ gem_dbw_bridge.
  </description>
  <maintainer email="mpcrlab@gmail.com">FAU MPCR</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
